--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,10 +1,13 @@
 name: Test connect to server
+env:
+  APPLICATION_NAME: "wppf"
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
+
 jobs:
   test_connection:
     name: 'Test connect to ssh server'
@@ -28,14 +31,28 @@ jobs:
     name: 'build app docker-file'
     runs-on: ubuntu-latest
     steps:
-  
+
+      - name: Set outputs
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+        
       - name: Git clone my repo
         uses: actions/checkout@v2
           
-      - name: build docker
+      - name: Build Docker
         run : |
           docker build -t webpage .
-          docker images
-        
-        
-  
+          
+      - name: Login to Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ${{ CONTAINER_REGESTRY_ADDRESS }}
+          username: ${{ secrets.CONTAINER_REGESTRY_USERNAME }}
+          password: ${{ secrets.CONTAINER_REGESTRY_USERNAME }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ env.APPLICATION_NAME}}:${{ steps.vars.outputs.sha_short }}
