--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -46,7 +46,7 @@ jobs:
       - name: Login to Container Registry
         uses: docker/login-action@v2
         with:
-          registry: ${{ CONTAINER_REGESTRY_ADDRESS }}
+          registry: ${{ secrets.CONTAINER_REGESTRY_ADDRESS }}
           username: ${{ secrets.CONTAINER_REGESTRY_USERNAME }}
           password: ${{ secrets.CONTAINER_REGESTRY_USERNAME }}
 
