--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -1,6 +1,7 @@
 name: Test connect to server
 env:
-  APPLICATION_NAME: "wppf"
+  APPLICATION_NAME        : "wppf"
+  CONTAINER_REGISTRY_NAME : "ssbotdocker"
 on:
   push:
     branches: [ "main" ]
@@ -52,4 +53,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ secrets.CONTAINER_REGISTRY_NAME }}/${{ env.APPLICATION_NAME}}:${{ github.sha }}
+          tags: ${{ env.CONTAINER_REGISTRY_NAME }}/${{ env.APPLICATION_NAME}}:${{ github.sha }}
