--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,8 +2,7 @@ name: man-build-push
 env:
   APPLICATION_NAME: "new_arch"
 on:
-  push
-#  workflow_dispatch:
+  workflow_dispatch:
 jobs:
   my-job:
     runs-on: ubuntu-latest
