--- a/.github/workflow/pipeline.yml
+++ b/.github/workflow/pipeline.yml
@@ -1,8 +1,9 @@
 name: test-man
-on: workflow_dispatch
+on:
+  workflow_dispatch
 jobs:
   my-job:
     runs-on: ubuntu-latest
     steps:
       - name: my-step
-        run: echo "Hello World1!!"
+        run: echo "Hello World!"
