--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+run-name: ${{ github.actor }} run on brnach ${GITHUB_HEAD_REF:-${GITHUB_REF#refs/heads/}} 🚀
 on: [push]
 jobs:
   Explore-GitHub-Actions:
