--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,5 @@
 name: GitHub Actions Demo
-run-name: ${{ github.actor }} run on brnach ${{ GITHUB_REF }} 🚀
+run-name: ${{ github.actor }} run on brnach ${{ env.APP_NAME }} 🚀
 on: [push]
 jobs:
   Explore-GitHub-Actions:
